# Cats-

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_prototype.py
.run/: CATS Automatic Prototype.run.xml
configs/: default-flow.json  qa-ad-flow.json
docs/: PROGRESS.md  RUN_IN_IDEA.md  android-roadmap.md  prototype-usage.md  qa-ad-flow.md  windows-setup.md
src/cats_automatic/: __init__.py  actions.py  adb_discovery.py  capture.py  config_loader.py  external_strategy_loader.py  game_base.py  game_loader.py  main.py  rules.py  run_recording.py  runner.py  scenario.py  strategy_base.py  strategy_runner.py  user_ad_reward_templates.py  user_close_templates.py  vision.py  window_capture.py
src/cats_automatic/backends/: __init__.py  adb_capture.py  capture_backend.py  fullscreen_capture.py  replay_capture.py  static_image_capture.py  window_capture.py
src/cats_automatic/games/: __init__.py
src/cats_automatic/games/cats/: __init__.py  config.json  game.py  strategy.py
src/cats_automatic/games/cats/strategies/: __init__.py  ad_reward.py
tests/: test_ad_reward_templates.py  test_adb_discovery.py  test_catsautomatic_gui.py  test_external_strategy_loader.py  test_framework.py  test_rules.py  test_scenario.py  test_strategy_mode.py  test_vision.py
tools/: build_release.ps1  build_release.py  catsautomatic_cli.py  catsautomatic_gui.py  check_environment.py  self_test.py
